--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.mabeijianxi.smallvideo2.MainActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:paddingBottom="@dimen/activity_vertical_margin"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingTop="@dimen/activity_vertical_margin"
+              tools:context="com.chexiaoya.ffmpegdemo.MainActivity">
 
     <RadioGroup
         android:id="@+id/rg_aspiration"
@@ -22,14 +22,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="录制视频" />
+            android:text="录制视频"/>
 
         <RadioButton
             android:id="@+id/rb_local"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="本地选择压缩" />
+            android:text="本地选择压缩"/>
     </RadioGroup>
 
     <View
@@ -37,7 +37,7 @@
         android:layout_height="1dp"
         android:layout_marginBottom="15dp"
         android:layout_marginTop="15dp"
-        android:background="#000000" />
+        android:background="#000000"/>
 
     <LinearLayout
         android:id="@+id/ll_only_compress"
@@ -51,7 +51,8 @@
             android:id="@+id/i_only_compress"
             layout="@layout/bitrate_mode_config"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
+
         <LinearLayout
             android:id="@+id/ll_only_framerate"
             android:layout_width="wrap_content"
@@ -62,7 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="视频帧率(不输入就使用原视频的)："
-                android:textSize="14sp" />
+                android:textSize="14sp"/>
 
             <EditText
                 android:id="@+id/et_only_framerate"
@@ -70,8 +71,9 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:textColorHint="#9b9b9b"
-                android:textSize="14sp" />
+                android:textSize="14sp"/>
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/ll_only_scale"
             android:layout_width="wrap_content"
@@ -82,17 +84,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="缩放视频比例，为浮点型，大于1有效"
-                android:textSize="14sp" />
+                android:textSize="14sp"/>
 
             <EditText
                 android:id="@+id/et_only_scale"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
-                android:textColorHint="#9b9b9b"
                 android:text="1.0"
-                android:textSize="14sp" />
+                android:textColorHint="#9b9b9b"
+                android:textSize="14sp"/>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -102,62 +105,94 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="压缩转码速度(可选):"
-                android:textSize="14sp" />
+                android:textSize="14sp"/>
 
             <Spinner
                 android:id="@+id/spinner_only_compress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:entries="@array/velocity" />
+                android:entries="@array/velocity"/>
         </LinearLayout>
+
         <Button
             android:id="@+id/bt_choose"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:onClick="choose"
-            android:text="选择视频并压缩" />
+            android:text="选择视频并压缩"/>
     </LinearLayout>
 
     <ScrollView xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/sv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+                android:id="@+id/sv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="visible"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="visible">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="是否全屏录制(你手机如果不是64位的cpu建议不要使用全屏，不然有点慢)"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"/>
 
                 <Spinner
                     android:id="@+id/spinner_need_full"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:entries="@array/need_full" />
+                    android:entries="@array/need_full"/>
             </LinearLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginBottom="15dp"
                 android:layout_marginTop="15dp"
-                android:background="#000000" />
+                android:background="#000000"/>
+
+            <RadioGroup
+                android:id="@+id/rg_camera"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/rb_behind"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="后置摄像头"/>
+
+                <RadioButton
+                    android:id="@+id/rb_front"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="前置摄像头"/>
+
+                <RadioButton
+                    android:id="@+id/rb_ext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="外接摄像头"/>
+            </RadioGroup>
+
             <TextView
                 android:id="@+id/tv_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="您手机支持的宽度有480、720、1080"
-                android:textSize="14sp" />
+                android:textSize="14sp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -169,7 +204,7 @@
                     android:layout_height="wrap_content"
                     android:text="width:"
                     android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
 
                 <EditText
                     android:id="@+id/et_width"
@@ -177,7 +212,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:inputType="number"
-                    android:text="360" />
+                    android:text="360"/>
 
                 <TextView
                     android:id="@+id/height"
@@ -186,7 +221,7 @@
                     android:layout_marginLeft="20dp"
                     android:text="height:"
                     android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
 
                 <EditText
                     android:id="@+id/et_height"
@@ -194,7 +229,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:inputType="number"
-                    android:text="480" />
+                    android:text="480"/>
             </LinearLayout>
 
             <LinearLayout
@@ -207,7 +242,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="视频最大帧率："
-                    android:textSize="14sp" />
+                    android:textSize="14sp"/>
 
                 <EditText
                     android:id="@+id/et_maxframerate"
@@ -216,8 +251,9 @@
                     android:inputType="number"
                     android:text="20"
                     android:textColorHint="#9b9b9b"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"/>
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/ll_bitrate"
                 android:layout_width="wrap_content"
@@ -228,7 +264,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="视频比特率："
-                    android:textSize="14sp" />
+                    android:textSize="14sp"/>
 
                 <EditText
                     android:id="@+id/et_record_bitrate"
@@ -237,8 +273,9 @@
                     android:inputType="number"
                     android:text="580000"
                     android:textColorHint="#9b9b9b"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"/>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -248,7 +285,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="最大录制时间："
-                    android:textSize="14sp" />
+                    android:textSize="14sp"/>
 
                 <EditText
                     android:id="@+id/et_maxtime"
@@ -257,7 +294,7 @@
                     android:inputType="number"
                     android:text="6000"
                     android:textColorHint="#9b9b9b"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"/>
             </LinearLayout>
 
             <LinearLayout
@@ -269,7 +306,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="最小录制时间："
-                    android:textSize="14sp" />
+                    android:textSize="14sp"/>
 
                 <EditText
                     android:id="@+id/et_mintime"
@@ -278,25 +315,26 @@
                     android:inputType="number"
                     android:text="1500"
                     android:textColorHint="#9b9b9b"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"/>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="录制转码速度(可选):"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"/>
 
                 <Spinner
                     android:id="@+id/spinner_record"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:entries="@array/velocity" />
+                    android:entries="@array/velocity"/>
             </LinearLayout>
 
             <View
@@ -304,7 +342,7 @@
                 android:layout_height="1dp"
                 android:layout_marginBottom="15dp"
                 android:layout_marginTop="15dp"
-                android:background="#000000" />
+                android:background="#000000"/>
 
             <Button
                 android:id="@+id/bt_start"
@@ -312,7 +350,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:onClick="go"
-                android:text="开始录制" />
+                android:text="开始录制"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
