--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="color_4e3d31">#4e3d31</color>
     <color name="grey8">#888888</color>
     <color name="transparent_black_85">#DA000000</color>
+
+    <color name="color_1e90ff">#1E90FF</color>
 </resources>
