--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="horizontal">
+              android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginBottom="100dp"
+        android:layout_marginTop="100dp"
         android:orientation="horizontal"
         android:paddingEnd="5dp"
         android:paddingLeft="5dp">
@@ -18,7 +18,7 @@
             android:id="@+id/ed_command"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="6"
+            android:layout_weight="8"
             android:background="@drawable/shape_ed_bg"
             android:hint="@string/hint"
             android:paddingLeft="10dp"/>
@@ -31,6 +31,7 @@
             android:background="@color/color_1e90ff"
             android:text="@string/invoke"
             android:textColor="@android:color/white"
-            android:textSize="18sp"/>
+            android:textSize="16sp"/>
     </LinearLayout>
+
 </LinearLayout>
