--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -183,6 +183,25 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/ll_do_add_bgm_music"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/color_1e90ff"
+                android:orientation="vertical"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="视频添加背景音乐"
+                    android:textSize="20sp"/>
+
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
