文字水印 图片水印添加 添加gif 图片支持

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -321,6 +321,23 @@
                     android:textSize="20sp"/>
 
             </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_do_play_video"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginTop="2dp"
+                android:background="@color/color_1e90ff"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="视频播放"
+                    android:textSize="20sp"/>
+
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
