--- a/app/src/main/res/layout/activity_videoplay.xml
+++ b/app/src/main/res/layout/activity_videoplay.xml
@@ -2,12 +2,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
-             android:background="@android:color/black"
+             android:background="@android:color/white"
              android:layout_height="match_parent">
 
     <com.xiaoxie.ffmpeglib.videoplay.FFmpegVideoView
         android:id="@+id/video_view"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </FrameLayout>
